# image_generation_quickCLI

./: .gitignore  README.md  image_generator.py  pyproject.toml
docs/: README.zh-CN.md
image_generator/: __init__.py  api_client.py  cli.py  config.py  history.py  i18n.py  image_service.py  reference_collage.py  version.py
scripts/: sync_version.py
tests/: conftest.py  test_api_client_edit.py  test_api_client_generate.py  test_api_client_save.py  test_cli_parsing.py  test_config.py  test_image_service_routing.py  test_reference_collage.py  test_regression_contract.py  test_service_prompt_parse.py
