[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-generator"
version = "0.1.1"
description = "Suchuang API image generation CLI with conversation context memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[project.scripts]
image-generator = "image_generator.cli:main"
